Bug 257373 - Misaligned button in transaction editor
Summary: Misaligned button in transaction editor
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5
Platform: MacPorts macOS
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-19 23:52 UTC by Marko Käning
Modified: 2011-05-24 19:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
TIFF of misaligned calculator button (4.73 KB, application/octet-stream)
2010-11-19 23:52 UTC, Marko Käning
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marko Käning 2010-11-19 23:52:31 UTC
Created attachment 53566 [details]
TIFF of misaligned calculator button

Version:           4.5 (using KDE 4.5.3) 
OS:                OS X

The calculator button in the transaction editor is misaligned in such a way that it's lower edge gets cut-off.
The button center is not in line with the amount edit field.
See attachment's TIFF.

Reproducible: Always
Comment 1 Marko Käning 2010-12-23 00:57:12 UTC
Could it be that this is caused by a slightly different size of the calculator icon?
The misalignment happens only for buttons using this icon.
Comment 2 Cristian Oneț 2011-05-21 09:27:57 UTC
SVN commit 1232920 by conet:

BUG: 257373
BUG: 272684

Don't set a fixed width and height for the calculator button. We don't do that for the calendar button of the dateinput either and it seems to work correctly.
257373 - I'm not sure that this is fixed since I don't have a way to test it; please reopen it if it's still present
272684 - It seems that because the button was smaller that it's needed size it's background was not filled now it works as expected

 M  +1 -5      kmymoneyedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1232920
Comment 3 Marko Käning 2011-05-21 10:43:23 UTC
Thanks Christian, yes this also fixes the bug on Mac OS X!
:-)
Great stuff!!!
Comment 4 Marko Käning 2011-05-24 01:19:00 UTC
Hi Cristian,

I'm reopening this one here, because I've found a similar problem with the "arrow button" in the dialog tab

   Search transactions/Amount

reachable via menu item

   Edit/Find transaction

where three buttons with a counterclockwise pointing arrow are all misaligned on Mac OSX just like the Calculator icon did before you fixed it in your above patch.

I hope you'll be able to fix these 3 too.

Greets,
Marko
Comment 5 Cristian Oneț 2011-05-24 19:52:55 UTC
SVN commit 1233456 by conet:

BUG: 257373

Don't set a fixed width and height for the reset button (same as the calculator button fix).

 M  +0 -2      kmymoneyedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1233456