BUG: 257373

Don't set a fixed width and height for the reset button (same as the calculator button fix).

svn path=/trunk/extragear/office/kmymoney/; revision=1233456